After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752476 - Several memory leaks
Several memory leaks
Status: RESOLVED FIXED
Product: file-roller
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: file-roller-maint
file-roller-maint
Depends on:
Blocks:
 
 
Reported: 2015-07-16 09:58 UTC by David King
Modified: 2015-12-13 14:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
g_path_get_temp_work_dir (2.16 KB, patch)
2015-07-16 10:00 UTC, David King
accepted-commit_now Details | Review
g_file_is_temp_work_dir (1.97 KB, patch)
2015-07-16 10:01 UTC, David King
accepted-commit_now Details | Review
fr_application_register_archive_manager_service (1.96 KB, patch)
2015-07-16 10:01 UTC, David King
accepted-commit_now Details | Review
fr_application_command_line (1.97 KB, patch)
2015-07-16 10:02 UTC, David King
accepted-commit_now Details | Review
fr_application_local_command_line (2.29 KB, patch)
2015-07-16 10:03 UTC, David King
accepted-commit_now Details | Review
fr_window_change_action_state (2.35 KB, patch)
2015-07-16 10:03 UTC, David King
accepted-commit_now Details | Review
fr_window_add_to_recent_list (1.72 KB, patch)
2015-07-16 10:03 UTC, David King
accepted-commit_now Details | Review
fr_window_construct (1.96 KB, patch)
2015-07-16 10:04 UTC, David King
accepted-commit_now Details | Review
query_info_ready_for_overwrite_dialog_cb (1.72 KB, patch)
2015-07-16 10:04 UTC, David King
accepted-commit_now Details | Review

Description David King 2015-07-16 09:58:14 UTC
While investigating a crash, I found several memory leaks with Valgrind.
Comment 1 David King 2015-07-16 10:00:26 UTC
Created attachment 307536 [details] [review]
g_path_get_temp_work_dir
Comment 2 David King 2015-07-16 10:01:13 UTC
Created attachment 307537 [details] [review]
g_file_is_temp_work_dir
Comment 3 David King 2015-07-16 10:01:39 UTC
Created attachment 307538 [details] [review]
fr_application_register_archive_manager_service
Comment 4 David King 2015-07-16 10:02:30 UTC
Created attachment 307539 [details] [review]
fr_application_command_line
Comment 5 David King 2015-07-16 10:03:01 UTC
Created attachment 307540 [details] [review]
fr_application_local_command_line
Comment 6 David King 2015-07-16 10:03:29 UTC
Created attachment 307541 [details] [review]
fr_window_change_action_state
Comment 7 David King 2015-07-16 10:03:58 UTC
Created attachment 307542 [details] [review]
fr_window_add_to_recent_list
Comment 8 David King 2015-07-16 10:04:24 UTC
Created attachment 307543 [details] [review]
fr_window_construct
Comment 9 David King 2015-07-16 10:04:55 UTC
Created attachment 307544 [details] [review]
query_info_ready_for_overwrite_dialog_cb
Comment 10 Michael Catanzaro 2015-11-29 22:37:46 UTC
Review of attachment 307538 [details] [review]:

Not sure I like this macro....
Comment 11 Michael Catanzaro 2015-11-29 22:40:31 UTC
Comment on attachment 307540 [details] [review]
fr_application_local_command_line

local_argv was unneeded?
Comment 12 Paolo Bacchilega 2015-12-13 14:15:33 UTC
(In reply to Michael Catanzaro from comment #11)
> Comment on attachment 307540 [details] [review] [review]
> fr_application_local_command_line
> 
> local_argv was unneeded?

Pushed all the patches with the exception of this one because it doesn't seem to fix a memory leak.

Thanks for the patches.